--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Basic Language of the Web: HTML</title>
-    <style>
-      h1 {
-        color: blue;
-      }
-    </style>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
