--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       <footer>
         <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
       </footer>
+      <button>💞Like</button>
     </div>
   </body>
 </html>
